--- a/client/templates/base.html
+++ b/client/templates/base.html
@@ -10,7 +10,42 @@
 
     <title>{% block title%} {% endblock %}</title>    
     <div>{% block css %}  {% endblock %} </div> 
-    
+    <style>
+      .dropbtn {
+        background-color: #343A40;
+        color: white;
+        padding: 8px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+      }
+      
+      .dropdown {
+        position: relative;
+        display: inline-block;
+      }
+      
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 150px;
+        overflow: auto;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+      }
+      
+      .dropdown-content a {
+        color: black;
+        padding: 12px 10px;
+        text-decoration: none;
+        display: block;
+      }
+      
+      .dropdown a:hover {background-color: #ddd;}
+      
+      .show {display: block;}
+    </style>
      
   </head>
   <body>
@@ -27,10 +62,20 @@
         <a class="nav-link" href='http://127.0.0.1:8000/client/'>Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="predict/">predict</a>
+        <div class="dropdown">
+          <button onclick="myFunction()" class="dropbtn">Predict</button>
+          <div id="myDropdown" class="dropdown-content">
+            <a href="http://127.0.0.1:8000/client/predict/">Delhi</a>
+            <a href="http://127.0.0.1:8000/client/chennaiPredict/">Chennai</a>
+          </div>
+        </div>
+        
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://127.0.0.1:8000/client/searchLocation/">searchLocation</a>
+        <a class="nav-link" href="http://127.0.0.1:8000/client/searchLocation/">SearchLocation</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://127.0.0.1:8000/client/searchflat/">Search Flat</a>
       </li>
     </ul>
     
@@ -43,5 +88,27 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script>
+      /* When the user clicks on the button, 
+      toggle between hiding and showing the dropdown content */
+      function myFunction() {
+        document.getElementById("myDropdown").classList.toggle("show");
+      }
+      
+      // Close the dropdown if the user clicks outside of it
+      window.onclick = function(event) {
+        if (!event.target.matches('.dropbtn')) {
+          var dropdowns = document.getElementsByClassName("dropdown-content");
+          var i;
+          for (i = 0; i < dropdowns.length; i++) {
+            var openDropdown = dropdowns[i];
+            if (openDropdown.classList.contains('show')) {
+              openDropdown.classList.remove('show');
+            }
+          }
+        }
+      }
+      </script>
   </body>
+
 </html>
