--- a/client/templates/getdata.html
+++ b/client/templates/getdata.html
@@ -37,9 +37,8 @@
           <th scope="col">BHK</th>
           <th scope="col">Bathroom</th>
           <th scope="col">Furnishing</th>
-          <th scope="col">Type</th>
           <th scope="col">Location</th>
-          <th scope="col">Parking</th>
+          <th scope="col">City</th>
           <th scope="col">Price</th>
         </tr>
       </thead>
@@ -50,9 +49,8 @@
           <td>{{ i.bhk }} </td>
           <td>{{ i.bathroom }}</td>
           <td>{{ i.Furnishing }}</td>
-          <td>{{ i.type }} </td>
           <td>{{ i.loc }}</td>
-          <td>{{ i.park }}</td>
+          <td>{{ i.city }}</td>
           <td>{{ i.price }}</td>
         </tr>
         {% endfor %} 
